<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locationView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/main_var"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/a_office_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/office_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationView2" />

        <TextView
            android:id="@+id/a_official_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/official_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_office_name" />

        <TextView
            android:id="@+id/a_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/official_party"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_official_name" />

        <TextView
            android:id="@+id/a_addressT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/addressT"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_official_img" />

        <TextView
            android:id="@+id/a_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/addressC"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/a_addressT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/a_addressT" />

        <TextView
            android:id="@+id/a_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/phoneC"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/a_phoneT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/a_address" />

        <TextView
            android:id="@+id/a_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/emailC"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/a_emailT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/a_address" />

        <TextView
            android:id="@+id/a_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/websiteC"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/a_websiteT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/a_address" />

        <TextView
            android:id="@+id/a_phoneT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/phoneT"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/a_addressT"
            app:layout_constraintTop_toBottomOf="@+id/a_address" />

        <TextView
            android:id="@+id/a_emailT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/emailT"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/a_addressT"
            app:layout_constraintTop_toBottomOf="@+id/a_phone" />

        <TextView
            android:id="@+id/a_websiteT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/websiteT"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/a_addressT"
            app:layout_constraintTop_toBottomOf="@+id/a_email" />

        <ImageView
            android:id="@+id/a_official_img"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/official_image"
            android:onClick="photoClicked"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_party"
            app:layout_constraintWidth_percent="0.9"
            app:srcCompat="@drawable/missing" />

        <ImageView
            android:id="@+id/a_party_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="290dp"
            android:contentDescription="@string/official_partyimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/a_official_img"
            app:srcCompat="@drawable/dem_logo" />

        <ImageView
            android:id="@+id/a_twitter_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/twitter"
            android:onClick="twitterClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_website"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/a_facebook_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/facebook"
            android:onClick="facebookClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_website"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/a_youtube_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/youtube"
            android:onClick="youTubeClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_website"
            app:srcCompat="@drawable/youtube" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>